updated both files

--- a/.github/workflows/02.Executing_Shell_Script/workflow_generate_ASCII.yml
+++ b/.github/workflows/02.Executing_Shell_Script/workflow_generate_ASCII.yml
@@ -2,7 +2,11 @@ name:  Generate ASCI workflow.
 
 on: 
   push
-
+  paths:
+    - ''
+pull_request:
+  paths:
+    
 jobs:
     ascii_job:
         runs-on: ubuntu-latest
