--- a/.github/workflows/workflow_generate_ASCII copy.yml
+++ b/.github/workflows/workflow_generate_ASCII copy.yml
@@ -1,20 +1,20 @@
-name: Run ASCII Script
+# name: Run ASCII Script
 
-on:
-  push:
-    paths:
-      - '02.Executing_Shell_Script/**'
-  pull_request:
-    paths:
-      - '02.Executing_Shell_Script/**'
+# on:
+#   push:
+#     paths:
+#       - '02.Executing_Shell_Script/**'
+#   pull_request:
+#     paths:
+#       - '02.Executing_Shell_Script/**'
 
-jobs:
-  ascii_job:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Repo
-        uses: actions/checkout@v4
+# jobs:
+#   ascii_job:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout Repo
+#         uses: actions/checkout@v4
 
-      - name: Run ASCII Script
-        working-directory: 02.Executing_Shell_Script
-        run: ./ascii-script.sh
+#       - name: Run ASCII Script
+#         working-directory: 02.Executing_Shell_Script
+#         run: ./ascii-script.sh
