--- a/.github/workflows/workflow_generate_ASCII.yml
+++ b/.github/workflows/workflow_generate_ASCII.yml
@@ -1,21 +1,26 @@
-name: Run ASCII Script
+name:  Generate ASCI workflow.
 
-on:
-  push:
-    paths:
-      - '02.Executing_Shell_Script/**'
-  pull_request:
-    paths:
-      - '02.Executing_Shell_Script/**'
+on: 
+    push
 
 jobs:
-  ascii_job:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Repo
-        uses: actions/checkout@v4
-
-      - name: Run ASCII Script
-        working-directory: 02.Executing_Shell_Script
-        run: ./ascii-script.sh
-
+    ascii_job:
+        runs-on: ubuntu-latest
+        steps:
+        - name: checkout Repo
+          uses: actions/checkout@v4
+        - name: Install Cowsay Program
+          run: sudo apt-get install cowsay -y
+        
+        - name: Execute Cowsay CMD
+          run: cowsay -f dragon "Run for cover, I am a DRAGON.......RAWR" >> dragon.txt
+        
+        - name: Test File Exists
+          run: grep -i "dragon" dragon.txt
+        
+        - name: Read File
+          run: cat dragon.txt
+        
+        - name: List Repo Files
+          run: ls -ltra
+        
