--- a/02.Github_Action_DevOps-Project/Working_PipeLine/Working_CICD.yaml
+++ b/02.Github_Action_DevOps-Project/Working_PipeLine/Working_CICD.yaml
@@ -3,15 +3,17 @@ name: Java CI with Maven
 on:
   push:
     branches: [ "main" ]
+    paths-ignore:
+      - 'deployment-service.yaml'
   pull_request:
     branches: [ "main" ]
-
-permissions:
-  contents: write
+    
 
 jobs:
   build:
     runs-on: self-hosted
+    outputs:
+      version: ${{ env.VERSION }}
 
     steps:
       - uses: actions/checkout@v4
@@ -98,12 +100,22 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Push Docker Image
-        run: docker push balrajsi/boardgame:${{ env.VERSION }}      
-      
+        run: docker push balrajsi/boardgame:${{ env.VERSION }}
+
+  update-manifests:
+    needs: build
+    runs-on: ubuntu-latest
+    
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.MY_GITHUB_PAT_TOKEN }}
+          fetch-depth: 0
+          
       - name: Update K8s Manifests
         run: |
           cat deployment-service.yaml
-          sed -i "s|image: */boardshack:.*|image: balrajsi/boardshack:${{ env.VERSION }}|g" deployment-service.yaml
+          sed -i "s|image:.*|image: balrajsi/boardgame:${{ needs.build.outputs.version }}|g" deployment-service.yaml
           cat deployment-service.yaml
       
       - name: Commit and push changes
@@ -111,6 +123,6 @@ jobs:
             git config --global user.email "github-actions@github.com"
             git config --global user.name "GitHub Actions"
             git add deployment-service.yaml
-            git commit -m "Update deployment-service.yaml with new image version - ${{ env.VERSION }}"
+            git commit -m "Update deployment-service.yaml with new image version - ${{ needs.build.outputs.version }}" || echo "No changes to commit"
             echo "Pushing changes using PAT token..."
-            git push "https://${{ secrets.MY_GITHUB_PAT_TOKEN }}@github.com/${{ vars.MY_GITHUB_PAT_TOKEN }}/${{ vars.MY_GITHUB_PAT_TOKEN }}" HEAD:main
+            git push "https://${{ secrets.MY_GITHUB_PAT_TOKEN }}@github.com/${{ github.repository }}" HEAD:main
